--- a/sdk/spring/spring-integration-azure-storage-queue/pom.xml
+++ b/sdk/spring/spring-integration-azure-storage-queue/pom.xml
@@ -56,6 +56,7 @@
       <scope>provided</scope>
     </dependency>
 
+    <!-- test -->
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
