--- a/sdk/spring/spring-messaging-azure-servicebus/pom.xml
+++ b/sdk/spring/spring-messaging-azure-servicebus/pom.xml
@@ -82,6 +82,13 @@
       <version>1.9.15</version> <!-- {x-version-update;io.micrometer:micrometer-core;external_dependency} -->
       <optional>true</optional>
     </dependency>
+
+    <dependency>
+      <groupId>com.azure</groupId>
+      <artifactId>azure-core</artifactId>
+      <version>1.44.0</version> <!-- {x-version-update;com.azure:azure-core;dependency} -->
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
