--- a/sdk/spring/spring-messaging-azure-storage-queue/pom.xml
+++ b/sdk/spring/spring-messaging-azure-storage-queue/pom.xml
@@ -53,6 +53,12 @@
     </dependency>
 
     <dependency>
+      <groupId>com.azure</groupId>
+      <artifactId>azure-core</artifactId>
+      <version>1.44.0</version> <!-- {x-version-update;com.azure:azure-core;dependency} -->
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
       <version>4.11.0</version> <!-- {x-version-update;org.mockito:mockito-core;external_dependency} -->
