--- a/sdk/client-core/client-core-http-netty/pom.xml
+++ b/sdk/client-core/client-core-http-netty/pom.xml
@@ -6,10 +6,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>com.client</groupId>
-    <artifactId>client-client-sdk-parent</artifactId>
-    <version>1.7.0</version> <!-- {x-version-update;com.client:client-client-sdk-parent;current} -->
-    <relativePath>../../parents/client-client-sdk-parent</relativePath>
+    <groupId>com.azure</groupId>
+    <artifactId>azure-client-sdk-parent</artifactId>
+    <version>1.7.0</version> <!-- {x-version-update;com.azure:azure-client-sdk-parent;current} -->
+    <relativePath>../../parents/azure-client-sdk-parent</relativePath>
   </parent>
 
   <groupId>com.client</groupId>
