--- a/sdk/mysqlflexibleserver/azure-resourcemanager-mysqlflexibleserver/pom.xml
+++ b/sdk/mysqlflexibleserver/azure-resourcemanager-mysqlflexibleserver/pom.xml
@@ -14,7 +14,7 @@
 
   <groupId>com.azure.resourcemanager</groupId>
   <artifactId>azure-resourcemanager-mysqlflexibleserver</artifactId>
-  <version>1.0.0</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-mysqlflexibleserver;current} -->
+  <version>1.1.0-beta.1</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-mysqlflexibleserver;current} -->
   <packaging>jar</packaging>
 
   <name>Microsoft Azure SDK for MySql Management</name>
