--- a/sdk/relay/azure-resourcemanager-relay/pom.xml
+++ b/sdk/relay/azure-resourcemanager-relay/pom.xml
@@ -14,7 +14,7 @@
 
   <groupId>com.azure.resourcemanager</groupId>
   <artifactId>azure-resourcemanager-relay</artifactId>
-  <version>1.0.0</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-relay;current} -->
+  <version>1.1.0-beta.1</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-relay;current} -->
   <packaging>jar</packaging>
 
   <name>Microsoft Azure SDK for Relay Management</name>
