--- a/sdk/keyvault/azure-security-keyvault-administration/TempTypeSpecFiles/Security.KeyVault.Administration/tspconfig.yaml
+++ b/sdk/keyvault/azure-security-keyvault-administration/TempTypeSpecFiles/Security.KeyVault.Administration/tspconfig.yaml
@@ -27,9 +27,9 @@ options:
     "package-dir": "azure-security-keyvault-administration"
     "namespace": "com.azure.security.keyvault.administration"
     "models-subpackage": "implementation.models"
-    #"custom-types": "KeyCurveName,KeyExportEncryptionAlgorithm,KeyOperation,KeyRotationPolicyAction,KeyType,ReleaseKeyResult"
-    #"custom-types-subpackage": "models"
-    "customization-class": "swagger/src/main/java/AdminCustomizations.java"
+    "custom-types": "KeyVaultDataAction,KeyVaultRoleDefinitionType,KeyVaultRoleScope,KeyVaultRoleType,KeyVaultSettingType"
+    "custom-types-subpackage": "models"
+    "customization-class": "swagger/src/main/java/AdministrationCustomizations.java"
     "partial-update": true
     "generate-tests": false
     "generate-samples": false
