--- a/sdk/hybridkubernetes/azure-resourcemanager-hybridkubernetes/pom.xml
+++ b/sdk/hybridkubernetes/azure-resourcemanager-hybridkubernetes/pom.xml
@@ -14,7 +14,7 @@
 
   <groupId>com.azure.resourcemanager</groupId>
   <artifactId>azure-resourcemanager-hybridkubernetes</artifactId>
-  <version>1.0.0</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-hybridkubernetes;current} -->
+  <version>1.1.0-beta.1</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-hybridkubernetes;current} -->
   <packaging>jar</packaging>
 
   <name>Microsoft Azure SDK for HybridKubernetes Management</name>
