--- a/sdk/databricks/azure-resourcemanager-databricks/pom.xml
+++ b/sdk/databricks/azure-resourcemanager-databricks/pom.xml
@@ -14,7 +14,7 @@
 
   <groupId>com.azure.resourcemanager</groupId>
   <artifactId>azure-resourcemanager-databricks</artifactId>
-  <version>1.0.0</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-databricks;current} -->
+  <version>1.1.0-beta.1</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-databricks;current} -->
   <packaging>jar</packaging>
 
   <name>Microsoft Azure SDK for AzureDatabricks Management</name>
