--- a/sdk/costmanagement/azure-resourcemanager-costmanagement/pom.xml
+++ b/sdk/costmanagement/azure-resourcemanager-costmanagement/pom.xml
@@ -14,7 +14,7 @@
 
   <groupId>com.azure.resourcemanager</groupId>
   <artifactId>azure-resourcemanager-costmanagement</artifactId>
-  <version>1.0.0-beta.8</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-costmanagement;current} -->
+  <version>1.0.0</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-costmanagement;current} -->
   <packaging>jar</packaging>
 
   <name>Microsoft Azure SDK for CostManagement Management</name>
@@ -45,7 +45,6 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <jacoco.min.linecoverage>0</jacoco.min.linecoverage>
     <jacoco.min.branchcoverage>0</jacoco.min.branchcoverage>
-    <revapi.skip>true</revapi.skip>
     <spotless.skip>false</spotless.skip>
   </properties>
   <dependencies>
