--- a/sdk/costmanagement/azure-resourcemanager-costmanagement/pom.xml
+++ b/sdk/costmanagement/azure-resourcemanager-costmanagement/pom.xml
@@ -14,7 +14,7 @@
 
   <groupId>com.azure.resourcemanager</groupId>
   <artifactId>azure-resourcemanager-costmanagement</artifactId>
-  <version>1.0.0</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-costmanagement;current} -->
+  <version>1.1.0-beta.1</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-costmanagement;current} -->
   <packaging>jar</packaging>
 
   <name>Microsoft Azure SDK for CostManagement Management</name>
