--- a/sdk/reservations/azure-resourcemanager-reservations/pom.xml
+++ b/sdk/reservations/azure-resourcemanager-reservations/pom.xml
@@ -14,7 +14,7 @@
 
   <groupId>com.azure.resourcemanager</groupId>
   <artifactId>azure-resourcemanager-reservations</artifactId>
-  <version>1.0.0</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-reservations;current} -->
+  <version>1.1.0-beta.1</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-reservations;current} -->
   <packaging>jar</packaging>
 
   <name>Microsoft Azure SDK for reservations Management</name>
