--- a/sdk/powerbidedicated/azure-resourcemanager-powerbidedicated/pom.xml
+++ b/sdk/powerbidedicated/azure-resourcemanager-powerbidedicated/pom.xml
@@ -14,7 +14,7 @@
 
   <groupId>com.azure.resourcemanager</groupId>
   <artifactId>azure-resourcemanager-powerbidedicated</artifactId>
-  <version>1.0.0</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-powerbidedicated;current} -->
+  <version>1.1.0-beta.1</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-powerbidedicated;current} -->
   <packaging>jar</packaging>
 
   <name>Microsoft Azure SDK for PowerBIDedicated Management</name>
