--- a/sdk/purview/azure-resourcemanager-purview/pom.xml
+++ b/sdk/purview/azure-resourcemanager-purview/pom.xml
@@ -14,7 +14,7 @@
 
   <groupId>com.azure.resourcemanager</groupId>
   <artifactId>azure-resourcemanager-purview</artifactId>
-  <version>1.0.0</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-purview;current} -->
+  <version>1.1.0-beta.1</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-purview;current} -->
   <packaging>jar</packaging>
 
   <name>Microsoft Azure SDK for Purview Management</name>
