--- a/sdk/extendedlocation/azure-resourcemanager-extendedlocation/pom.xml
+++ b/sdk/extendedlocation/azure-resourcemanager-extendedlocation/pom.xml
@@ -14,11 +14,11 @@
 
   <groupId>com.azure.resourcemanager</groupId>
   <artifactId>azure-resourcemanager-extendedlocation</artifactId>
-  <version>1.0.0-beta.4</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-extendedlocation;current} -->
+  <version>1.0.0</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-extendedlocation;current} -->
   <packaging>jar</packaging>
 
   <name>Microsoft Azure SDK for CustomLocations Management</name>
-  <description>This package contains Microsoft Azure SDK for CustomLocations Management SDK. For documentation on how to use this package, please see https://aka.ms/azsdk/java/mgmt. The customLocations Rest API spec. Package tag package-2021-08-31-preview.</description>
+  <description>This package contains Microsoft Azure SDK for CustomLocations Management SDK. For documentation on how to use this package, please see https://aka.ms/azsdk/java/mgmt. The customLocations Rest API spec. Package tag package-2021-08-15.</description>
   <url>https://github.com/Azure/azure-sdk-for-java</url>
 
   <licenses>
@@ -45,7 +45,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <jacoco.min.linecoverage>0</jacoco.min.linecoverage>
     <jacoco.min.branchcoverage>0</jacoco.min.branchcoverage>
-    <revapi.skip>true</revapi.skip>
+    <spotless.skip>false</spotless.skip>
   </properties>
   <dependencies>
     <dependency>
