--- a/sdk/storagepool/azure-resourcemanager-storagepool/pom.xml
+++ b/sdk/storagepool/azure-resourcemanager-storagepool/pom.xml
@@ -14,7 +14,7 @@
 
   <groupId>com.azure.resourcemanager</groupId>
   <artifactId>azure-resourcemanager-storagepool</artifactId>
-  <version>1.0.0</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-storagepool;current} -->
+  <version>1.1.0-beta.1</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-storagepool;current} -->
   <packaging>jar</packaging>
 
   <name>Microsoft Azure SDK for StoragePool Management</name>
