--- a/sdk/deviceprovisioningservices/azure-resourcemanager-deviceprovisioningservices/pom.xml
+++ b/sdk/deviceprovisioningservices/azure-resourcemanager-deviceprovisioningservices/pom.xml
@@ -14,7 +14,7 @@
 
   <groupId>com.azure.resourcemanager</groupId>
   <artifactId>azure-resourcemanager-deviceprovisioningservices</artifactId>
-  <version>1.0.0</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-deviceprovisioningservices;current} -->
+  <version>1.1.0</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-deviceprovisioningservices;current} -->
   <packaging>jar</packaging>
 
   <name>Microsoft Azure SDK for IotDps Management</name>
@@ -46,6 +46,7 @@
     <jacoco.min.linecoverage>0</jacoco.min.linecoverage>
     <jacoco.min.branchcoverage>0</jacoco.min.branchcoverage>
     <spotless.skip>false</spotless.skip>
+    <revapi.skip>true</revapi.skip>
   </properties>
   <dependencies>
     <dependency>
